css/main.css
/*body {
	font-family: Veranda, Geneva, sans-serif;
}*/
ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #333;

}
li {
    float:left;
}
li a {
	display: block;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    color:white;
}
li a:hover {
	background-color: #111;
}
h1 a {
	text-decoration: none;
	color:black;
}

h1 a:hover, a:active {
	color: #15317E;
	text-decoration: none;
}

#banner {
	margin: 0 auto;
	padding: 2.5em 0 0 0;
}
#banner h1 {font-size: 3.571em; line-height: .6;}
body {
	color: #000204;
	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;/*Helvetica, Arial, Verdana, sans-serif;*/
	font-size: 77.5%; /* base font = 14px*/
	font-weight: 300;
	line-height: 1.429; /* 1.429*current font size = 20px */
	margin: 0;
	padding: 0;
	text-align: left;
}
.body {clear: both; margin: 0 auto; width: 700px;}

#left {
	width:250px;
	float:left;
	padding-left:20px;

}

#right {
	margin-left: 250px;
	padding-left: 40px;
	padding-right: 20px;

}
#fallcourse {
	position: absolute;
	width:250px;
	float:left;
	padding-left:20px;
	height:170px;
}
#springcourse {
	margin-left: 250px;
	padding-left: 40px;
	padding-right: 20px;
	height:170px;
}

#wrapper {
	width:660px;
	overflow:hidden;
	background-color: #FFF;
	padding: 20px;
	margin: 0 auto;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	margin-top: 40px;
}
#wrapper h2 {
	font-size: 1.714em;
/*	margin-bottom: 0.5em;
*/	font-weight: bold;

}
#links {
	padding-top: 25px;
	margin:auto;
	width:450px;

}

.button {
	background-color: #4CAF50;
	margin:auto;
	border: none;
	color:white;
	width:125px;
	padding: 15px 32px;
	font-size: 16px;
	text-align: center;
}

.leftbutton {
	float:left;
	width:50%;
}

.rightbutton {
	margin-left: 50%;
}

